refactor to slideshow component

--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
 	    </div>
     </header>
     <!-- end header -->
-    <!-- hero-container -->
-    <section class="slideshow-container">
+
+    <!-- slideshow-container -->
+<!--     <section class="slideshow-container">
 	    <div class="content-wrapper">
 	        <ul class="caption-container">
 	        	<li class="slide-caption" id="complexity">
@@ -177,7 +178,63 @@
 		    </ul>
         </div>
     </section>
+ -->    <!-- end hero-container -->
+
+    <!-- slideshow-container -->
+    <section class="slideshow-container">
+	    <div class="content-wrapper">
+		        <ol class="slideshow-indicators clearfix">
+		        	<li><a href="#complexity">1</a></li>
+		        	<li><a href="#evolve">2</a></li>
+		        	<li><a href="#monetize">3</a></li>
+		        	<li><a href="#optimize">4</a></li>
+		        </ol>
+		    <ul class="promotions clearfix">
+			    <li class="promotion-item pink">
+				    <a href="#">
+				    	<p>Comverse is value-added service global market leader.</p>
+				    	<footer>
+					    	<a role="more-info" href="#">Read More</a>
+				    	</footer>
+				    </a>
+			    </li>
+			    <li class="promotion-item green">
+				    <a href="#">
+				    	<p>Managed services world congress September 18-19 Brelin, Germany</p>
+				    	<footer>
+					    	<a role="more-info" href="#">Read More</a>
+				    	</footer>
+				    </a>
+			    </li>
+			    <li class="promotion-item orange">
+				    <a href="#">
+				    	<p>Comverse: Enabling a world of connected possibilities</p>
+				    	<footer>
+					    	<a role="more-info" href="#">Watch Now</a>
+				    	</footer>
+				    </a>
+			    </li>
+		    </ul>
+	    </div>
+	    <ul class="slides-container">
+	    	<li>
+		        <div class="content-wrapper">
+			        <div class="caption-container">
+				        <h2>Free your markets from complexity</h2>
+				        <p>Comverse policy studio<br>
+				        <b>1st</b> ever marketing-oriented policy tool</p>
+				        <a class="btn" href="#">learn more</a>
+			        </div>
+		        </div>
+	    	</li>
+	    </ul>
+	        <ul class="caption-container">
+	        	<li class="slide-caption" id="complexity">
+	        	</li>
+	        </ul>
+    </section>
     <!-- end hero-container -->
+
     <!-- solutions -->
     <section class="solutions">
 	    <div class="content-wrapper">
