finished markup and styling. all but footer is styled for medium breakpoint

--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
 </head>
 <body>
     <!-- header -->
-    <header class="site">
+    <header class="site" id="header">
 	    <div class="content-wrapper clearfix">
 		    <ul class="secondery clearfix">
 		    	<li><a href="#">Contact us</a></li>
 		    	<li><a href="#">Customer login</a></li>
 		    </ul>
-			<a class="brand" href="#">
-				<img class="comverse-logo" src="img/comverse-logo.png" width="185" height="62" alt="comverse company logo">
-			</a>
+			<a class="brand" href="#">Comverse Inc</a>
 			<nav class="navigation main clearfix">
 			    <ul>
 			    	<li>
@@ -130,57 +128,6 @@
     <!-- end header -->
 
     <!-- slideshow-container -->
-<!--     <section class="slideshow-container">
-	    <div class="content-wrapper">
-	        <ul class="caption-container">
-	        	<li class="slide-caption" id="complexity">
-			        <h2>Free your markets from complexity</h2>
-			        <p>Comverse policy studio<br>
-			        <b>1st</b> ever marketing-oriented policy tool</p>
-			        <a class="btn" href="#">learn more</a>
-	        	</li>
-	        </ul>
-	    </div>
-        <nav>
-	        <ol class="slideshow-indicators clearfix">
-	        	<li><a href="#complexity">1</a></li>
-	        	<li><a href="#evolve">2</a></li>
-	        	<li><a href="#monetize">3</a></li>
-	        	<li><a href="#optimize">4</a></li>
-	        </ol>
-        </nav>
-        <div class="content-wrapper">
-		    <ul class="promotions clearfix">
-			    <li class="promotion-item pink">
-				    <a href="#">
-				    	<p>Comverse is value-added service global market leader.</p>
-				    	<footer>
-					    	<a role="more-info" href="#">Read More</a>
-				    	</footer>
-				    </a>
-			    </li>
-			    <li class="promotion-item green">
-				    <a href="#">
-				    	<p>Managed services world congress September 18-19 Brelin, Germany</p>
-				    	<footer>
-					    	<a role="more-info" href="#">Read More</a>
-				    	</footer>
-				    </a>
-			    </li>
-			    <li class="promotion-item orange">
-				    <a href="#">
-				    	<p>Comverse: Enabling a world od connected possibilities</p>
-				    	<footer>
-					    	<a role="more-info" href="#">Watch Now</a>
-				    	</footer>
-				    </a>
-			    </li>
-		    </ul>
-        </div>
-    </section>
- -->    <!-- end hero-container -->
-
-    <!-- slideshow-container -->
     <section class="slideshow-container">
 	    <div class="content-wrapper">
 		        <ol class="slideshow-indicators clearfix">
@@ -228,10 +175,6 @@
 		        </div>
 	    	</li>
 	    </ul>
-	        <ul class="caption-container">
-	        	<li class="slide-caption" id="complexity">
-	        	</li>
-	        </ul>
     </section>
     <!-- end hero-container -->
 
@@ -292,7 +235,7 @@
 					    	<p>Comverse regains lead in convergent changing markets</p>
 					    </div>
 				    </a>
-			    	<a class="view-all events" href="#">All Events</a>
+			    	<a class="view-all allevents" href="#">All Events</a>
 		    	</li>
 		    	<li>
 				    <h3 class="light">press releases</h3>
@@ -317,69 +260,147 @@
 		    <h2 class="section darken">success stories</h2>
 		    <ul class="testimonials-container clearfix">
 		        <li class="clearfix">
-				    <div class="testimonials large-ts">
-				        <img class="testimonials-author-profile-picture" src="img/CB-JP-face.png" width="100" height="100" alt="Adale Kehassan profile picture">
-				     	<blockquote>BTC, a full-service provider in the Bahamas, depends on Comverse solut…</blockquote>	
-				    	<footer class="testimonials-info">
-					    	<div class="testimonials-author">
-					    		<p class="name"><cite>Jonathan Pierce</cite></p>
-					    		<p class="position">Group Mobile Architect</p>
-					    	</div>
-							<img class="testimonials-author-logo" src="img/cable_wireless_w100px_X_h42px2.jpg" width="100" height="42" alt="wireless company logo">
-				    	</footer>
+			        <div class="wrap-testimonial large-wrap">
+					    <a href="#">
+						    <div class="testimonials large-ts">
+						        <img class="testimonials-author-profile-picture" src="img/CB-JP-face.png" width="100" height="100" alt="Adale Kehassan profile picture">
+						     	<blockquote>BTC, a full-service provider in the Bahamas, depends on Comverse solut…</blockquote>	
+						    	<footer class="testimonials-info">
+							    	<div class="testimonials-author">
+							    		<p class="name"><cite>Jonathan Pierce</cite></p>
+							    		<p class="position">Group Mobile Architect</p>
+							    	</div>
+									<img class="testimonials-author-logo" src="img/cable_wireless_w100px_X_h42px2.jpg" width="100" height="42" alt="wireless company logo">
+						    	</footer>
+						    </div>
+						    <div class="testimonials-back large-ts-back">
+						     	<blockquote>BTC, a full-service provider in the Bahamas, depends on Comverse solutions for real-time BSS, voice services, SMS, MMS and data management and monetization.</blockquote>	
+						    </div>
+					    </a>
+			        </div>
+			        <div class="wrap-testimonial small-wrap">
+				        <a href="#">
+						    <div class="testimonials small-ts">
+						    	<img src="img/mts_w108px_X_h95px.jpg" width="108" height="95" alt="mts company logo">
+						    </div>
+						    <div class="testimonials-back small-ts-back">
+						    	<img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" width="108" height="95" alt="play video icon">
+						    </div>
+				        </a>
 				    </div>
-				    <div class="testimonials small-ts">
-				    	<img src="img/mts_w108px_X_h95px.jpg" width="108" height="95" alt="mts company logo">
-				    </div>
-				    <div class="testimonials small-ts">
-				    	<img src="img/Tata_Sky_w108px_X_h95px.jpg" width="108" height="95" alt="tata sky company logo">
-				    </div>
-				    <div class="testimonials small-ts">
-				    	<img src="img/upc_w108px_X_h95px.jpg" width="108" height="95" alt="upc company logo">
-				    </div>
+			        <div class="wrap-testimonial small-wrap">
+				        <a href="#">
+						    <div class="testimonials small-ts">
+						    	<img src="img/Tata_Sky_w108px_X_h95px.jpg" width="108" height="95" alt="tata sky company logo">
+						    </div>
+						    <div class="testimonials-back small-ts-back">
+						    	<img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" width="108" height="95" alt="play video icon">
+						    </div>
+				        </a>
+			        </div>
+			        <div class="wrap-testimonial small-wrap">
+				        <a href="#">
+						    <div class="testimonials small-ts">
+						    	<img src="img/upc_w108px_X_h95px.jpg" width="108" height="95" alt="upc company logo">
+						    </div>
+						    <div class="testimonials-back small-ts-back">
+						    	<img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" width="108" height="95" alt="play video icon">
+						    </div>
+				        </a>
+			        </div>
 		        </li>
 		        <li class="clearfix">
-				    <div class="testimonials small-ts">
-				    	<img src="img/MAX_telecom_w108px_X_h95.jpg" width="108" height="95" alt="max telecom company logo">
-				    </div>
-				    <div class="testimonials small-ts">
-				    	<img src="img/Kyivstarw_w108px_X_h95.jpg" width="108" height="95" alt="Kyivstar company logo">
-				    </div>
-				    <div class="testimonials small-ts">
-				    	<img src="img/VIDEOCON_w108px_X_h95px.jpg" width="108" height="95" alt="videocon company logo">
-				    </div>
-				    <div class="testimonials large-ts">
-				        <img class="testimonials-author-profile-picture" src="img/JT-GM-face.png" width="100" height="100" alt="Greham Miller profile picture">
-				     	<blockquote>The expectations of Jersey Telecom have been completely met by Comvers…</blockquote>	
-				    	<footer class="testimonials-info">
-					    	<div class="testimonials-author">
-					    		<p class="name"><cite>Graeme Miller</cite></p>
-					    		<p class="position">CEO</p>
-					    	</div>
-							<img class="testimonials-author-logo" src="img/Jersey_Telecom_w100px_X_h42px.jpg" width="100" height="42" alt="Jersey Tel company logo">
-				    	</footer>
-				    </div>
+			        <div class="wrap-testimonial small-wrap">
+				        <a href="#">
+						    <div class="testimonials small-ts">
+						    	<img src="img/MAX_telecom_w108px_X_h95.jpg" width="108" height="95" alt="max telecom company logo">
+						    </div>
+						    <div class="testimonials-back small-ts-back">
+						    	<img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" width="108" height="95" alt="play video icon">
+						    </div>
+				        </a>
+			        </div>
+			        <div class="wrap-testimonial small-wrap">
+				        <a href="#">
+						    <div class="testimonials small-ts">
+						    	<img src="img/Kyivstarw_w108px_X_h95.jpg" width="108" height="95" alt="Kyivstar company logo">
+						    </div>
+						    <div class="testimonials-back small-ts-back">
+						    	<img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" width="108" height="95" alt="play video icon">
+						    </div>
+				        </a>
+			        </div>
+			        <div class="wrap-testimonial small-wrap">
+				        <a href="#">
+						    <div class="testimonials small-ts">
+						    	<img src="img/VIDEOCON_w108px_X_h95px.jpg" width="108" height="95" alt="videocon company logo">
+						    </div>
+						    <div class="testimonials-back small-ts-back">
+						    	<img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" width="108" height="95" alt="play video icon">
+						    </div>
+				        </a>
+			        </div>
+			        <div class="wrap-testimonial large-wrap">
+				        <a href="#">
+						    <div class="testimonials large-ts">
+						        <img class="testimonials-author-profile-picture" src="img/JT-GM-face.png" width="100" height="100" alt="Greham Miller profile picture">
+						     	<blockquote>The expectations of Jersey Telecom have been completely met by Comvers…</blockquote>	
+						    	<footer class="testimonials-info">
+							    	<div class="testimonials-author">
+							    		<p class="name"><cite>Graeme Miller</cite></p>
+							    		<p class="position">CEO</p>
+							    	</div>
+									<img class="testimonials-author-logo" src="img/Jersey_Telecom_w100px_X_h42px.jpg" width="100" height="42" alt="Jersey Tel company logo">
+						    	</footer>
+						    </div>
+						    <div class="testimonials-back large-ts-back">
+						     	<blockquote>The expectations of Jersey Telecom have been completely met by Comverse ONE BSS – and in some areas exceeded.</blockquote>	
+						    </div>
+				        </a>
+			        </div>
 		        </li>
 		        <li class="clearfix">
-				    <div class="testimonials medium-ts">
-				    	 <blockquote>Comverse has demonstrated that they are partners, not just suppliers</blockquote>	
-				    	<footer class="testimonials-info">
-					    	<div class="testimonials-author">
-					    		<p class="name"><cite>Adale Kehassan</cite></p>
-					    		<p class="position">CIO</p>
-					    	</div>
-							<img class="testimonials-author-logo" src="img/multilinks.jpg" width="70" height="40" alt="multilinks company logo">
-				    	</footer>
-				    </div>
-				    <div class="testimonials small-ts">
-				    	<img src="img/3mob_w108px_X_h95px.jpg" width="108" height="95" alt="3mob company logo">
-				    </div>
-				    <div class="testimonials small-ts">
-				    	<img src="img/play_w108px_X_h95px.jpg" width="108" height="95" alt="play company logo">
-				    </div>
+			        <div class="wrap-testimonial medium-wrap">
+				        <a href="#">
+						    <div class="testimonials medium-ts">
+						    	 <blockquote>Comverse has demonstrated that they are partners, not just suppliers</blockquote>	
+						    	<footer class="testimonials-info">
+							    	<div class="testimonials-author">
+							    		<p class="name"><cite>Adale Kehassan</cite></p>
+							    		<p class="position">CIO</p>
+							    	</div>
+									<img class="testimonials-author-logo" src="img/multilinks.jpg" width="70" height="40" alt="multilinks company logo">
+						    	</footer>
+						    </div>
+						    <div class="testimonials-back medium-ts-back">
+						     	<blockquote>Comverse has demonstrated that they are partners, not just suppliers</blockquote>	
+						    </div>
+				        </a>
+			        </div>
+			        <div class="wrap-testimonial small-wrap">
+				        <a href="#">
+						    <div class="testimonials small-ts">
+						    	<img src="img/3mob_w108px_X_h95px.jpg" width="108" height="95" alt="3mob company logo">
+						    </div>
+						    <div class="testimonials-back small-ts-back">
+						    	<img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" width="108" height="95" alt="play video icon">
+						    </div>
+				        </a>
+			        </div>
+			        <div class="wrap-testimonial small-wrap">
+				        <a href="#">
+						    <div class="testimonials small-ts">
+						    	<img src="img/play_w108px_X_h95px.jpg" width="108" height="95" alt="play company logo">
+						    </div>
+						    <div class="testimonials-back small-ts-back">
+						    	<img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" width="108" height="95" alt="play video icon">
+						    </div>
+				        </a>
+			        </div>
 		        </li>
 		    </ul>
 		    <a class="btn" href="#">All 256 success stories</a>
+		    <a class="back-top" href="#header">go back up</a>
 	    </div>
     </section>
     <!-- end success stories -->
