started small screen breakpoint - reached the events section

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
     </section>
     <!-- end success stories -->
     <!-- site footer -->
-    <footer class="site clearfix">
+    <footer class="large-site clearfix">
 	    <div class="content-wrapper clearfix">
 	        <ul class="sitemap clearfix">
 	        	<li>
@@ -471,6 +471,22 @@
 		    <ul class="sub-navigation clearfix">
 		    	<li>Copyright © 2012 Comverse, Inc.</li>
 		    	<li><a href="#">Privacy Policy</a></li>
+		    </ul>
+	    </div>
+    </footer>
+
+    <footer class="medium-site clearfix">
+	    <div class="content-wrapper clearfix">
+		    <ul class="social-links clearfix">
+		    	<li><a data="youtube" href="#">youtube</a></li>
+		    	<li><a data="twitter" href="#"></a></li>
+		    	<li><a data="linkdin" href="#"></a></li>
+		    </ul>
+		    <ul class="sub-navigation clearfix">
+		    	<li>Copyright © 2012 Comverse, Inc.</li>
+		    	<li><a href="#">Privacy Policy</a></li>
+		    	<li><a href="#">Sitemap</a></li>
+		    	<li><a class="subscribe" href="#">Subscribe to comverse</a></li>
 		    </ul>
 	    </div>
     </footer>
