continued working on small screen breakpoint. still missing final footer styling

--- a/index.html
+++ b/index.html
@@ -490,6 +490,28 @@
 		    </ul>
 	    </div>
     </footer>
+
+    <footer class="small-site clearfix">
+	    <div class="content-wrapper clearfix">
+		    <ul class="social-links clearfix">
+		    	<li><a data="youtube" href="#">youtube</a></li>
+		    	<li><a data="twitter" href="#"></a></li>
+		    	<li><a data="linkdin" href="#"></a></li>
+		    </ul>
+		    <ul class="sub-navigation clearfix">
+		    	<li><a href="#">contact us</a></li>
+		    	<li><a href="#">subscribe to comverse news</a></li>
+		    	<li class="social-nav">visit us on:</li>
+		    	<li class="tiny-nav clearfix">
+		    	<ul>
+		    		<li>Copyright © 2014 Comverse, Inc.</li>
+		    		<li><a href="#">Privacy Policy</a></li>
+		    		<li><a href="#">Sitemap</a></li>
+		    	</ul>
+		    	</li>
+		    </ul>
+	    </div>
+    </footer>
     <!-- end site footer -->
 </body>
 </html>
