responsive layout done. finished header and footer small screen structure

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		    	<li><a href="#">Customer login</a></li>
 		    </ul>
 			<a class="brand" href="#">Comverse Inc</a>
+		    <label for="hamburger-nav">Menu</label>
+		    <input type="checkbox" id="hamburger-nav">
 			<nav class="navigation main clearfix">
 			    <ul>
 			    	<li>
@@ -119,8 +121,10 @@
 			    	</li>
 			    </ul>
 			</nav>
+		    <label for="search-tap">Search</label>
+		    <input type="checkbox" id="search-tap">
 		    <form class="searchbox">
-		        <input type="search">
+		        <input type="search" placeholder="Search">
 		    	<input type="submit">
 		    </form>
 	    </div>
@@ -502,14 +506,14 @@
 		    	<li><a href="#">contact us</a></li>
 		    	<li><a href="#">subscribe to comverse news</a></li>
 		    	<li class="social-nav">visit us on:</li>
-		    	<li class="tiny-nav clearfix">
-		    	<ul>
+		    </ul>
+		    <div class="content-wrapper tiny clearfix">
+		    	<ul class="tiny-nav">
 		    		<li>Copyright © 2014 Comverse, Inc.</li>
 		    		<li><a href="#">Privacy Policy</a></li>
 		    		<li><a href="#">Sitemap</a></li>
 		    	</ul>
-		    	</li>
-		    </ul>
+		    </div>
 	    </div>
     </footer>
     <!-- end site footer -->
