refactoring to style-guide html and css files. still need to sort promotion-item

--- a/style-guide.html
+++ b/style-guide.html
@@ -7,190 +7,209 @@
 	<link rel="stylesheet" href="css/styleguide.css">
 </head>
 <body class="sg-body">
-	<!-- //////////////////////////// COMVERSE STYLE GUIDE //////////////////////////// -->
- 	<h1 class="sg-heading">Comverse style guide</h1>
+    <h1 class="sg-heading">Comverse style guide</h1>
+    <div class="content-wrapper sg-wrapper clearfix">
 
+        <!-- #BRAND -->
+    	<h2 class="sg-heading">Brand</h2>
+    	<h3  class="sg-heading">Logo</h3>
+        <div class="content-wrapper clearfix">
+            <a class="brand" href="#">Comverse Inc</a>
+        </div>
+        <!-- #brand-colors -->
+    	<h3 class="sg-heading">Brand colors</h3>
+        <div class="content-wrapper clearfix">
+            <!-- waiting to fill -->
+        </div>
 
+        <!-- #HEADINGS -->
+        <h2 class="sg-heading">Headings</h2>
+        <h3  class="sg-heading">h2 carousel heading</h3>
+        <div class="content-wrapper clearfix">
+            <h2>this is a h2 heading for the carousel slides</h3>
+        </div>
+        <h3 class="sg-heading">h2 section heading light</h3>
+        <div class="content-wrapper clearfix">
+            <h2 class="section">this is a h2 light heading for a section</h2>
+        </div>
+        <h3 class="sg-heading">h3 heading</h3>
+        <div class="content-wrapper clearfix">
+            <h3>this is a h3 heading</h3>
+        </div>
 
+        <!-- #LISTS -->
+        <h2 class="sg-heading">Lists</h2>    
+        <!-- #navigation -->
+        <h3 class="sg-heading">main navigation</h3>
+        <div class="content-wrapper clearfix">
+            <label for="hamburger-nav">Menu</label>
+            <input type="checkbox" id="hamburger-nav">
+            <nav class="navigation main clearfix">
+                <ul>
+                    <li><a href="#">item one</a></li>
+                    <li><a href="#">item two</a></li>
+                    <li><a href="#">item three</a></li>
+                    <li><a href="#">jitem four</a></li>
+                </ul>
+            </nav>
+        </div>
+        <!-- #site-map -->
+        <h3 class="sg-heading">Sitemap Navigation list</h3>
+        <div class="content-wrapper sg-footer clearfix">
+        <!-- start component -->
+            <ul class="sitemap clearfix">
+                <li>
+                    <h4 class="sitemap-list-title">key solutions</h4>
+                    <ul class="sitemap-list-item">
+                        <li><a href="#">Monetizing Data</a></li>
+                        <li><a href="#">Over-the-top (OTT)</a></li>
+                        <li><a href="#">Machine 2 Machine (M2M)</a></li>
+                        <li><a href="#">Cloud Computing</a></li>
+                        <li><a href="#">Managed Services</a></li>
+                        <li><a href="#">Customer Experience Management</a></li>
+                        <li><a href="#">Rich Communication Suite (RCS)</a></li>
+                        <li><a href="#">Social Media</a></li>
+                        <li><a href="#">4G/ LTE</a></li>
+                    </ul>
+                </li>
+            </ul>
+        <!-- end component -->
+        </div>
+        <!-- #sub-navigation -->
+        <h3 class="sg-heading">sub-navigation</h3>
+        <div class="content-wrapper clearfix">
+            <ul class="sub-navigation clearfix">
+                <li>Copyright © 2012 Comverse, Inc.</li>
+                <li><a href="#">Privacy Policy</a></li>
+            </ul>
+        </div>
 
+        <!-- #BUTTONS -->
+        <h2 class="sg-heading">buttons</h2>
+        <!-- #primary-btn -->
+        <h3 class="sg-heading">primary button</h3>
+        <div class="content-wrapper clearfix">
+            <a class="btn" href="#">learn more</a>
+        </div>
 
-	<!-- //////////////////////////// BRAND //////////////////////////// -->
+        <!-- #FORMS -->
+        <h2 class="sg-heading">Forms</h2>
+        <!-- #searchbox -->
+        <h3 class="sg-heading">searchbox</h3>
+        <div class="content-wrapper clearfix">
+            <label for="search-tap">Search</label>
+            <input type="checkbox" id="search-tap">
+            <form class="searchbox">
+                <input type="search" placeholder="Search">
+                <input type="submit">
+            </form>
+        </div>
+    	<!-- #sign-up -->
+        <h3 class="sg-heading">sign-up</h3>
+        <div class="content-wrapper clearfix">
+            <form class="signup-form">
+                <input type="email">
+                <input type="submit" value="SIGN UP" class="btn-sign-up">
+            </form>
+        </div>
 
-	<!-- LOGO -->
-	<h2 class="sg-heading">Brand</h2>
-
-
-	<h3  class="sg-heading">Logo</h3>
-	<a class="brand" href="#">
-		<img src="img/comverse-logo.png" width="185" height="62" alt="comverse company logo">
-	</a>
-
-	<!-- BRAND COLORS -->
-	<h3 class="sg-heading">Brand colors</h3>
-
-
-
-
-
-	<!-- //////////////////////////// HEADINGS //////////////////////////// -->
-    <h2 class="sg-heading">Headings</h2>
-
-	<!-- H2 HEADING -->
-    <h3  class="sg-heading">h2 carousel heading</h3>
-    <h2>this is a h2 heading for the carousel slides</h3>
-
-    <h3 class="sg-heading">h2 section heading light</h3>
-    <h2 class="section">this is a h2 light heading for a section</h2>
-
-	<!-- H3 HEADING -->
-    <h3 class="sg-heading">h3 heading</h3>
-    <h3>this is a h3 heading</h3>
-
-
-
-
-
-	<!-- //////////////////////////// LISTS //////////////////////////// -->
-    <h2 class="sg-heading">Lists</h2>    
-
-	<!-- NAVIGATION -->
-    <h3 class="sg-heading">main navigation</h3>
-    <ul class="navigation clearfix">
-    	<li><a href="#">item one</a></li>
-    	<li><a href="#">item two</a></li>
-    	<li><a href="#">item three</a></li>
-    	<li><a href="#">item four</a></li>
-    </ul>
-
-    <h3 class="sg-heading">Sitemap Navigation list</h3>
-    <div class="wrapper sg-footer">
-    <!-- start component -->
-        <ul class="sitemap">
-        	<li>
-		 	    <h4 class="sitemap-list-title">list title</h4>
-			    <ul class="sitemap-list-item">
-			    	<li><a href="#">item one</a></li>
-			    	<li><a href="#">item two</a></li>
-			    	<li><a href="#">item three</a></li>
-			    	<li><a href="#">item four</a></li>
-			    </ul>
-        	</li>
-        </ul>
-    <!-- end component -->
+        <!-- #MODULES -->
+        <h2 class="sg-heading">modules</h2>
+        <!-- #promotion-item -->
+        <h3 class="sg-heading">information box</h3>
+        <div class="content-wrapper sg-inner-wrapper clearfix">
+            <ul class="promotions clearfix">
+                <li class="promotion-item pink">
+                    <a href="#">
+                        <p>This is the information-box heading</p>
+                        <footer>
+                            <a role="more-info" href="#">Read More</a>
+                        </footer>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!-- #event-item -->
+        <h3 class="sg-heading">event box</h3>
+        <div class="content-wrapper clearfix">
+            <ul class="events clearfix">
+                <li>
+                    <h3 class="light">news</h3>
+                    <a href="#">
+                        <div class="event">
+                            <div class="date">
+                                <div class="day">29</div>
+                                <div class="month">Aug</div>
+                            </div>
+                            <p>Comverse regains lead in convergent changing markets</p>
+                        </div>
+                    </a>
+                    <a class="view-all news" href="#">All News</a>
+                </li>
+            </ul>
+        </div>
+        <!-- #testimonial-item -->
+        <h3 class="sg-heading">testimonials</h3>
+        <div class="content-wrapper clearfix">
+            <ul class="testimonials-container clearfix">
+                <li class="clearfix">
+                    <div class="wrap-testimonial large-wrap">
+                        <a href="#">
+                            <div class="testimonials large-ts">
+                                <img class="testimonials-author-profile-picture" src="img/CB-JP-face.png" width="100" height="100" alt="Adale Kehassan profile picture">
+                                <blockquote>BTC, a full-service provider in the Bahamas, depends on Comverse solut…</blockquote>    
+                                <footer class="testimonials-info">
+                                    <div class="testimonials-author">
+                                        <p class="name"><cite>Jonathan Pierce</cite></p>
+                                        <p class="position">Group Mobile Architect</p>
+                                    </div>
+                                    <img class="testimonials-author-logo" src="img/cable_wireless_w100px_X_h42px2.jpg" width="100" height="42" alt="wireless company logo">
+                                </footer>
+                            </div>
+                            <div class="testimonials-back large-ts-back">
+                                <blockquote>BTC, a full-service provider in the Bahamas, depends on Comverse solutions for real-time BSS, voice services, SMS, MMS and data management and monetization.</blockquote>   
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wrap-testimonial medium-wrap">
+                        <a href="#">
+                            <div class="testimonials medium-ts">
+                                 <blockquote>Comverse has demonstrated that they are partners, not just suppliers</blockquote>  
+                                <footer class="testimonials-info">
+                                    <div class="testimonials-author">
+                                        <p class="name"><cite>Adale Kehassan</cite></p>
+                                        <p class="position">CIO</p>
+                                    </div>
+                                    <img class="testimonials-author-logo" src="img/multilinks.jpg" width="70" height="40" alt="multilinks company logo">
+                                </footer>
+                            </div>
+                            <div class="testimonials-back medium-ts-back">
+                                <blockquote>Comverse has demonstrated that they are partners, not just suppliers</blockquote>   
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wrap-testimonial small-wrap">
+                        <a href="#">
+                            <div class="testimonials small-ts">
+                                <img src="img/mts_w108px_X_h95px.jpg" width="108" height="95" alt="mts company logo">
+                            </div>
+                            <div class="testimonials-back small-ts-back">
+                                <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" width="108" height="95" alt="play video icon">
+                            </div>
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <!-- #solution-item -->
+        <h3 class="sg-heading">Solution-item</h3>
+        <div class="content-wrapper clearfix">
+            <ul class="our-solutions clearfix">
+                <li class="solution biz-analytics">
+                    <a href="#"><p>Business Stimulating Analytics</p></a>
+                </li>
+            </ul>
+        </div>
     </div>
-
-    <h3 class="sg-heading">sub-navigation</h3>
-    <ul class="sub-navigation">
-    	<li><a href="#">item one</a></li>
-    	<li><a href="#">item two</a></li>
-    	<li><a href="#">item three</a></li>
-    </ul>
-
-
-
-
-	<!-- //////////////////////////// BUTTONS //////////////////////////// -->
-    <h2 class="sg-heading">buttons</h2>
-
-	<!-- PRIMARY BUTTON -->
-    <h3 class="sg-heading">primary button</h3>
-    <a class="btn" href="#">See all of our solutions</a>
-
-
-
-
-
-	<!-- //////////////////////////// FORMS //////////////////////////// -->
-    <h2 class="sg-heading">Forms</h2>
-
-	<!-- SEARCHBOX -->
-    <h3 class="sg-heading">searchbox</h3>
-    <form class="searchbox">
-        <input type="search">
-    	<input type="submit">
-    </form>
-
-
-	<!-- sign-up -->
-    <h3 class="sg-heading">sign-up</h3>
-    <form class="signup-form">
-        <input type="email">
-    	<input type="submit" value="SIGN UP" class="btn-sign-up">
-    </form>
-
-
-	<!-- //////////////////////////// MODULES //////////////////////////// -->
-    <h2 class="sg-heading">modules</h2>
-
-	<!-- INFORMATION BOX -->
-    <h3 class="sg-heading">information box</h3>
-    <ul>
-	    <li class="promotion-item orange">
-	    	<p>This is the information-box heading</p>
-	    	<footer>
-		    	<a href="#">Read More</a>
-	    	</footer>
-	    </li>
-    </ul>
-
-	<!-- EVENT BOX -->
-    <h3 class="sg-heading">event box</h3>
-	    <div class="event">
-	    	<div class="date">
-	    		<div class="day">29</div>
-	    		<div class="month">Aug</div>
-	    	</div>
-	    	<p>Creating a Compelling Carrier Comeback Solution</p>
-	    </div>
-    	<a class="view-all news" href="#">All News</a>
-
-	<!-- TESTIMONIALS BOXES -->
-
-    <h3 class="sg-heading">testimonials</h3>
-    <h4 class="sg-heading">small-box</h4>
-    <div class="testimonials small-ts">
-    	<img src="img/MAX_telecom_w108px_X_h95.jpg" width="108" height="95" alt="max telecom company logo">
-    </div>
-
-    <h4 class="sg-heading">medium-box</h4>
-    <div class="testimonials medium-ts">
-    	 <blockquote>Comverse has demonstrated that they are partners, not just suppliers</blockquote>	
-    	<footer class="testimonials-info">
-	    	<div class="testimonials-author">
-	    		<p class="name"><cite>Adale Kehassan</cite></p>
-	    		<p class="position">CIO</p>
-	    	</div>
-			<img class="testimonials-author-logo" src="img/multilinks.jpg" width="70" height="40" alt="multilinks company logo">
-    	</footer>
-    </div>
-
-    <h4 class="sg-heading">large-box</h4>
-    <div class="testimonials large-ts">
-        <img class="testimonials-author-profile-picture" src="img/CB-JP-face.png" width="100" height="100" alt="Adale Kehassan profile picture">
-     	<blockquote>Comverse has demonstrated that they are partners, not just suppliers</blockquote>	
-    	<footer class="testimonials-info">
-	    	<div class="testimonials-author">
-	    		<p class="name"><cite>Adale Kehassan</cite></p>
-	    		<p class="position">CIO</p>
-	    	</div>
-			<img class="testimonials-author-logo" src="img/multilinks.jpg" width="70" height="40" alt="multilinks company logo">
-    	</footer>
-    </div>
-
-
-
-
-
-	<!-- //////////////////////////// ICONS //////////////////////////// -->
-    <h2 class="sg-heading">Icons</h2>
-
-	<!-- SOLUTIONS ICONS -->
-    <h3 class="sg-heading">Solutions icons</h3>
-    <ul class="our-solutions clearfix">
-    	<li class="solution biz-analytics">
-	    	<a href="#"><p>Business Stimulating Analytics</p></a>
-    	</li>
-    </ul>
-
 </body>
 </html>
