updated style-guide page to be responsive as home page

--- a/style-guide.html
+++ b/style-guide.html
@@ -41,7 +41,7 @@
         <h2 class="sg-heading">Lists</h2>    
         <!-- #navigation -->
         <h3 class="sg-heading">main navigation</h3>
-        <div class="content-wrapper clearfix">
+        <div class="content-wrapper sg-inner-wrapper clearfix">
             <label for="hamburger-nav">Menu</label>
             <input type="checkbox" id="hamburger-nav">
             <nav class="navigation main clearfix">
@@ -49,7 +49,7 @@
                     <li><a href="#">item one</a></li>
                     <li><a href="#">item two</a></li>
                     <li><a href="#">item three</a></li>
-                    <li><a href="#">jitem four</a></li>
+                    <li><a href="#">item four</a></li>
                 </ul>
             </nav>
         </div>
@@ -77,7 +77,7 @@
         </div>
         <!-- #sub-navigation -->
         <h3 class="sg-heading">sub-navigation</h3>
-        <div class="content-wrapper clearfix">
+        <div class="content-wrapper sg-footer clearfix">
             <ul class="sub-navigation clearfix">
                 <li>Copyright © 2012 Comverse, Inc.</li>
                 <li><a href="#">Privacy Policy</a></li>
@@ -96,7 +96,7 @@
         <h2 class="sg-heading">Forms</h2>
         <!-- #searchbox -->
         <h3 class="sg-heading">searchbox</h3>
-        <div class="content-wrapper clearfix">
+        <div class="content-wrapper sg-inner-wrapper clearfix">
             <label for="search-tap">Search</label>
             <input type="checkbox" id="search-tap">
             <form class="searchbox">
@@ -116,7 +116,7 @@
         <!-- #MODULES -->
         <h2 class="sg-heading">modules</h2>
         <!-- #promotion-item -->
-        <h3 class="sg-heading">information box</h3>
+        <h3 class="sg-heading">information-item</h3>
         <div class="content-wrapper sg-inner-wrapper clearfix">
             <ul class="promotions clearfix">
                 <li class="promotion-item pink">
@@ -130,7 +130,7 @@
             </ul>
         </div>
         <!-- #event-item -->
-        <h3 class="sg-heading">event box</h3>
+        <h3 class="sg-heading">event-item</h3>
         <div class="content-wrapper clearfix">
             <ul class="events clearfix">
                 <li>
@@ -149,7 +149,7 @@
             </ul>
         </div>
         <!-- #testimonial-item -->
-        <h3 class="sg-heading">testimonials</h3>
+        <h3 class="sg-heading">testimonials-items</h3>
         <div class="content-wrapper clearfix">
             <ul class="testimonials-container clearfix">
                 <li class="clearfix">
