refactoring to main nav of small screens

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 			    <ul>
 			    	<li>
 			    	    <a href="#">your needs</a>
+					    <label for="your-needs">your needs</label>
+					    <input type="radio" id="your-needs" name="menu">
 			    	    <div class="mega-dropdwon clearfix">
 			    	    	<div class="links">
 			    	    		<ul>
@@ -41,7 +43,9 @@
 			    	    </div>
 			    	</li>
 			    	<li>
-			    	<a href="#">our portfolio</a>
+				    	<a href="#">our portfolio</a>
+					    <label for="our-portfolio">our portfolio</label>
+					    <input type="radio" id="our-portfolio" name="menu">
 			    	    <div class="mega-dropdwon clearfix">
 			    	    	<div class="links">
 			    	    		<ul>
@@ -75,7 +79,9 @@
 			    	    </div>
 			    	</li>
 			    	<li>
-			    	<a href="#">news & media</a>
+				    	<a href="#">news & media</a>
+					    <label for="news">news & media</label>
+					    <input type="radio" id="news" name="menu">
 			    	    <div class="mega-dropdwon clearfix">
 			    	    	<div class="links">
 			    	    		<ul>
@@ -97,7 +103,9 @@
 			    	    </div>
 			    	</li>
 			    	<li>
-			    	<a href="#">about comverse</a>
+				    	<a href="#">about comverse</a>
+					    <label for="about">about comverse</label>
+					    <input type="radio" id="about" name="menu">
 			    	    <div class="mega-dropdwon clearfix">
 			    	    	<div class="links">
 			    	    		<ul>
